fix vertical alignment of fullcalender buttons, fixes #4722
Closes #4722

Merge request studip/studip!3517

--- a/resources/assets/stylesheets/fullcalendar.scss
+++ b/resources/assets/stylesheets/fullcalendar.scss
@@ -25,6 +25,7 @@ a.fc-event, td.fc-event {
 
             margin-top: 0;
             margin-bottom: 0;
+            padding: 5px 20px;
 
             &:last-of-type {
                 margin-right: 0;
